Impl - Mvvm patern TableVİew added

--- a/MvvMSwift/Base.lproj/Main.storyboard
+++ b/MvvMSwift/Base.lproj/Main.storyboard
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="7eW-Op-dg1">
+    <device id="retina6_1" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +13,154 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="MvvMSwift" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="721-Vx-Vkg">
+                                <rect key="frame" x="0.0" y="88" width="414" height="808"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="CellDefault" rowHeight="83" id="8v1-s0-Tex" customClass="CellDefault" customModule="MvvMSwift" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="83"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="8v1-s0-Tex" id="EHl-w4-HRH">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="82.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Iap-LV-bdh">
+                                                    <rect key="frame" x="28" y="11" width="45" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Surname" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JSV-iI-2er">
+                                                    <rect key="frame" x="28" y="40" width="69" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="Iap-LV-bdh" firstAttribute="top" secondItem="EHl-w4-HRH" secondAttribute="topMargin" id="aAB-9I-qTE"/>
+                                                <constraint firstItem="JSV-iI-2er" firstAttribute="top" secondItem="Iap-LV-bdh" secondAttribute="bottom" constant="8" id="cX6-KW-7nd"/>
+                                                <constraint firstItem="JSV-iI-2er" firstAttribute="leading" secondItem="EHl-w4-HRH" secondAttribute="leadingMargin" constant="8" id="lWL-V0-dC2"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="JSV-iI-2er" secondAttribute="bottom" constant="11" id="tfN-dz-HEm"/>
+                                                <constraint firstItem="Iap-LV-bdh" firstAttribute="leading" secondItem="EHl-w4-HRH" secondAttribute="leadingMargin" constant="8" id="u4y-Ah-1Ig"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="lastName" destination="JSV-iI-2er" id="MbJ-Et-5Ai"/>
+                                            <outlet property="name" destination="Iap-LV-bdh" id="wnV-cM-eba"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="721-Vx-Vkg" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="3d5-X7-2RY"/>
+                            <constraint firstItem="721-Vx-Vkg" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="QjF-oH-r6y"/>
+                            <constraint firstAttribute="bottom" secondItem="721-Vx-Vkg" secondAttribute="bottom" id="Y0U-hc-V6Q"/>
+                            <constraint firstItem="721-Vx-Vkg" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="lhD-ZB-vD1"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <navigationItem key="navigationItem" id="Xae-2d-Lz3"/>
+                    <connections>
+                        <outlet property="tableView" destination="721-Vx-Vkg" id="tVt-pu-6ph"/>
+                        <outlet property="viewModel" destination="JiX-kg-9dF" id="ic4-dA-hEH"/>
+                        <segue destination="Ufd-UQ-c0C" kind="show" id="VHV-e1-fzv"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <customObject id="6dF-y3-X4R" customClass="FetchData" customModule="MvvMSwift" customModuleProvider="target"/>
+                <customObject id="JiX-kg-9dF" customClass="ViewModel" customModule="MvvMSwift" customModuleProvider="target">
+                    <connections>
+                        <outlet property="fetchData" destination="6dF-y3-X4R" id="QXR-M4-mRJ"/>
+                    </connections>
+                </customObject>
             </objects>
+            <point key="canvasLocation" x="914" y="137"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="KPf-yZ-Iv8">
+            <objects>
+                <viewController id="Ufd-UQ-c0C" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="i4z-aE-gdg">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="ygM-Bh-8mW">
+                                <rect key="frame" x="0.0" y="88" width="414" height="808"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="182" id="cZo-gX-lcB">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="182"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="cZo-gX-lcB" id="OE7-HD-CaI">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="181.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tWS-xx-ppm">
+                                                    <rect key="frame" x="20" y="11" width="76" height="29"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Surname" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5ka-58-pFl">
+                                                    <rect key="frame" x="20" y="48" width="76" height="29"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Age" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="x1k-ib-Z8D">
+                                                    <rect key="frame" x="20" y="142" width="76" height="29"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="ygM-Bh-8mW" firstAttribute="top" secondItem="VSu-mU-nYu" secondAttribute="top" id="EwW-Qe-Ebf"/>
+                            <constraint firstAttribute="bottom" secondItem="ygM-Bh-8mW" secondAttribute="bottom" id="Rlo-Pb-8x5"/>
+                            <constraint firstItem="ygM-Bh-8mW" firstAttribute="leading" secondItem="VSu-mU-nYu" secondAttribute="leading" id="au9-rH-F4n"/>
+                            <constraint firstItem="ygM-Bh-8mW" firstAttribute="trailing" secondItem="VSu-mU-nYu" secondAttribute="trailing" id="k8S-7S-eH4"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="VSu-mU-nYu"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="5W7-9J-7Fe" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1582.608695652174" y="140.625"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="fYK-TG-0nq">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="7eW-Op-dg1" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="c4d-ws-EME">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="CUp-eW-oPh"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="QMq-MH-7nA" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="114" y="137"/>
         </scene>
     </scenes>
 </document>
